SERVER-130952 SERVER-130953 Address uninitialized scaleIndex (#60051)

GitOrigin-RevId: 6386fc7d9aa737f5f66f1439876f32c73ca344ba